// Copyright 2022 The jackal Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/jackal-xmpp/stravaganza/stravaganza.proto";

package c2s.v1;

option go_package = "pkg/c2s/pb";

// ResourceInfo represents resource associated info content.
message ResourceInfo {
  // instance_id indicates what instance registered this resource.
  string instance_id = 1;

  // domain is the resource associated domain.
  string domain = 2;

  // info is the resource additional context info.
  map<string, string> info = 3;

  // presence is the resource last received presence.
  stravaganza.PBElement presence = 4;
}

